--- a/build.xml
+++ b/build.xml
@@ -65,11 +65,11 @@
 				</tokenfilter>
 			</filterchain>
 		</loadresource>
-		<!-- Store the escaped and minified JS code in OVVAsset -->
-	 	<replace file="${tmp.dir}/org/openvv/OVVAsset.as" token="{{OVVAssetJS}}" value="${js-src-esc}" />
+		<!-- Store the escaped and minified JS code in OVVAssetBridge -->
+	 	<replace file="${tmp.dir}/org/openvv/OVVAssetBridge.as" token="{{OVVAssetJS}}" value="${js-src-esc}" />
 	 	<!-- Time to compile! -->
 		<compc output="${bin.dir}/openvv.swc"
-			   include-classes="org.openvv.OVVAsset org.openvv.OVVCheck org.openvv.OVVRenderMeter org.openvv.OVVThrottleType org.openvv.events.OVVEvent net.iab.IVPAID net.iab.VPAIDEvent org.openvv.OVVVersion">
+			   include-classes="org.openvv.OVVAssetBridge org.openvv.OVVCheck org.openvv.OVVRenderMeter org.openvv.OVVThrottleType org.openvv.events.OVVEvent net.iab.IVPAID net.iab.VPAIDEvent org.openvv.OVVVersion">
 			<source-path path-element="${tmp.dir}"/>
 		</compc>
 		<!-- Remove the temp dir -->
